tools/data-handler/test/test-data/invalid/invalid-card-missing-fieldtype/.cards/local/reports/anotherReport/index.adoc.hbs
{{#each results}}
* xref:{{this.key}}.adoc[{{this.title}}]
{{/each}}